# profile-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  vimrc
src/: config.rs  context.rs  error.rs  file.rs  file_list.rs  main.rs  opts.rs
src/config/: files.rs  keywords.rs  mod.rs
src/context/: mod.rs  verbosity.rs
src/file_list/: mod.rs
src/file_list/expand_files/: mod.rs  settings.rs
src/files/: mod.rs
src/files/edit_files/: mod.rs  settings.rs
src/files/expand_files/: mod.rs  settings.rs
src/profiles/: mod.rs
