[package]
name = "profilers"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[dependencies]
clap           = "2.33.0"
derive_builder = "0.9.0"
dirs           = "2.0.2"
glob           = "0.3.0"
regex          = "1.3.1"
serde          = { version = "1.0.104", features = ["derive"] }
serde_regex    = "0.4.0"
structopt      = "0.3.5"
toml           = "0.5.5"
